add refresh token check
