# docs/swagger.json
@@ -6,38 +6,12 @@
         "contact": {},
         "version": "1.0"
     },
-    "host": "localhost:8081",
+    "host": "localhost:8081/api",
     "basePath": "/",
     "paths": {
-        "/:alias": {
-            "get": {
-                "description": "redirect from alias to it's url",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "url"
-                ],
-                "summary": "Redirect",
-                "responses": {
-                    "308": {
-                        "description": "Permanent Redirect",
-                        "schema": {
-                            "type": "integer"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/response.Error"
-                        }
-                    }
-                }
-            }
-        },
-        "/api/session": {
+        "/session": {
             "post": {
-                "description": "create a session",
+                "description": "Creates a session",
                 "consumes": [
                     "application/json"
                 ],
@@ -47,7 +21,7 @@
                 "tags": [
                     "session"
                 ],
-                "summary": "Create",
+                "summary": "User login",
                 "parameters": [
                     {
                         "description": "Account credentials",
@@ -63,7 +37,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/response.Token"
+                            "$ref": "#/definitions/response.TokenPair"
                         }
                     },
                     "400": {
@@ -83,22 +57,22 @@
             "delete": {
                 "security": [
                     {
-                        "SessionIDAuth": []
+                        "AccessToken": []
                     }
                 ],
-                "description": "close a session",
+                "description": "Close a session",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "session"
                 ],
-                "summary": "Close",
+                "summary": "User logout",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/response.Success"
+                            "type": "integer"
                         }
                     },
                     "401": {
@@ -116,14 +90,14 @@
                 }
             }
         },
-        "/api/url": {
+        "/url": {
             "post": {
                 "security": [
                     {
-                        "SessionIDAuth": []
+                        "AccessToken": []
                     }
                 ],
-                "description": "create an url in database",
+                "description": "Creates a URL in database, assigned to user",
                 "consumes": [
                     "application/json"
                 ],
@@ -133,7 +107,7 @@
                 "tags": [
                     "url"
                 ],
-                "summary": "Create",
+                "summary": "Create URL",
                 "parameters": [
                     {
                         "description": "Url data",
@@ -179,30 +153,30 @@
                 }
             }
         },
-        "/api/url/:alias": {
+        "/url/:alias": {
             "delete": {
                 "security": [
                     {
-                        "SessionIDAuth": []
+                        "AccessToken": []
                     }
                 ],
-                "description": "delete an url from database",
+                "description": "Deletes an url from database",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "url"
                 ],
-                "summary": "Delete",
+                "summary": "Delete URL",
                 "responses": {
-                    "201": {
-                        "description": "Created",
+                    "200": {
+                        "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/response.Success"
+                            "type": "integer"
                         }
                     },
-                    "400": {
-                        "description": "Bad Request",
+                    "401": {
+                        "description": "Unauthorized",
                         "schema": {
                             "$ref": "#/definitions/response.Error"
                         }
@@ -228,9 +202,9 @@
                 }
             }
         },
-        "/api/user": {
+        "/user": {
             "post": {
-                "description": "create a user in database",
+                "description": "Creates a user in database",
                 "consumes": [
                     "application/json"
                 ],
@@ -240,7 +214,7 @@
                 "tags": [
                     "user"
                 ],
-                "summary": "Create",
+                "summary": "User registration",
                 "parameters": [
                     {
                         "description": "User data",
@@ -280,14 +254,14 @@
                 }
             }
         },
-        "/api/user/me": {
+        "/user/me": {
             "delete": {
                 "security": [
                     {
-                        "SessionIDAuth": []
+                        "AccessToken": []
                     }
                 ],
-                "description": "delete me in database",
+                "description": "Delete me from database",
                 "produces": [
                     "application/json"
                 ],
@@ -299,17 +273,11 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/response.Success"
+                            "type": "integer"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
-                        "schema": {
-                            "$ref": "#/definitions/response.Error"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/response.Error"
                         }
@@ -323,11 +291,11 @@
                 }
             }
         },
-        "/api/user/me/urls": {
+        "/user/me/urls": {
             "get": {
                 "security": [
                     {
-                        "SessionIDAuth": []
+                        "AccessToken": []
                     }
                 ],
                 "description": "Get all URLs created by user",
@@ -350,12 +318,6 @@
                     },
                     "401": {
                         "description": "Unauthorized",
-                        "schema": {
-                            "$ref": "#/definitions/response.Error"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/response.Error"
                         }
@@ -415,18 +377,13 @@
                 }
             }
         },
-        "response.Success": {
+        "response.TokenPair": {
             "type": "object",
             "properties": {
-                "message": {
+                "access_token": {
                     "type": "string"
-                }
-            }
-        },
-        "response.Token": {
-            "type": "object",
-            "properties": {
-                "token": {
+                },
+                "refresh_token": {
                     "type": "string"
                 }
             }
@@ -469,9 +426,9 @@
         }
     },
     "securityDefinitions": {
-        "SessionIDAuth": {
+        "AccessToken": {
             "type": "apiKey",
-            "name": "SessionID",
+            "name": "Authorization",
             "in": "header"
         }
     }
