# internal/http-server/handler/middleware.go
@@ -28,7 +28,7 @@ func (h *Handler) CheckAuth(ctx *gin.Context) {
 		return
 	}
 
-	claims, err := h.tokenService.Parse(headerParts[1])
+	claims, err := h.tokenService.ParseAccessToken(headerParts[1])
 	if err != nil {
 		response.SendError(ctx, http.StatusUnauthorized, "token is invalid")
 		return
@@ -36,16 +36,22 @@ func (h *Handler) CheckAuth(ctx *gin.Context) {
 
 	ctx.Set(ContextUserID, claims.UserID)
 
-	tokenPair, err := h.tokenService.GenerateTokenPair(claims.UserID)
-	if err != nil {
-		response.SendError(ctx, http.StatusInternalServerError, "can't refresh tokens")
-		return
+	cookieRefreshToken, _ := ctx.Cookie("refresh_token")
+	if cookieRefreshToken != "" {
+		claims, err = h.tokenService.ParseRefreshToken(cookieRefreshToken)
+		if err == nil {
+			tokenPair, err := h.tokenService.GenerateTokenPair(claims.UserID)
+			if err != nil {
+				response.SendError(ctx, http.StatusInternalServerError, "can't refresh tokens")
+				return
+			}
+
+			cookieMaxAge := 30 * 24 * time.Hour
+
+			ctx.SetCookie("refresh_token", tokenPair.RefreshToken, int(cookieMaxAge.Seconds()), "/", "localhost", false, true)
+			ctx.Header(HeaderAuthorization, fmt.Sprintf("Bearer %s", tokenPair.AccessToken))
+		}
 	}
-
-	cookieMaxAge := 30 * 24 * time.Hour
-
-	ctx.SetCookie("refresh_token", tokenPair.RefreshToken, int(cookieMaxAge.Seconds()), "/", "localhost", false, true)
-	ctx.Header(HeaderAuthorization, fmt.Sprintf("Bearer %s", tokenPair.AccessToken))
 }
 
 func (h *Handler) LogRequest(ctx *gin.Context) {
